{{$NEXT}}

v5.0.6    2021-11-12 19:39:19 EST
  - Improve efficiency of stats query (#19, Sebastian Riedel)

v5.0.5    2021-06-15 21:18:41 EDT
  - Support min_priority option in dequeue method.
  - Update IRC metadata to libera.chat

v5.0.4    2021-02-16 13:30:11 EST
  - Use Mojo::Promise in tests instead of the deprecated and decored Mojo::IOLoop::Delay (#17, Stefan Adams)

v5.0.3    2020-08-02 18:15:20 EDT
  - Minion requirement bumped to 10.13.
  - Removed experimental support for job sequences.
  - Added EXPERIMENTAL expire option to enqueue method to support expiring jobs.
  - Added EXPERIMENTAL lax option to enqueue method to support lax dependencies.
  - Removed next and previous fields from list_jobs method.
  - Added expires and lax fields to list_jobs method.
  - Fixed a bug where manual retries would count towards the attempts limit for automatic retries.
  - Optimized checking parent job state in job dequeue.

v5.0.2    2020-07-23 00:30:45 EDT
  - Minion requirement bumped to 10.10.
  - Support removing stuck jobs in repair method.
  - Added EXPERIMENTAL sequence option to enqueue method and sequences option to list_jobs method
    to support job sequences.
  - Added next and previous fields to list_jobs method.

v5.0.1    2020-06-17 23:20:46 EDT
  - Fixed tests to be less sensitive to error message contents.

v5.0.0    2020-06-17 01:22:45 EDT
  - Minion requirement bumped to 10.03.
  - Changed reset method to require options for what to reset and allow for
    locks to be reset without resetting the whole queue.
  - Added before options to list_jobs and list_workers methods to support
    iterating jobs and workers.

4.005     2019-08-05 11:00:01 EDT
  - Allow fields to be removed with note method.

4.004     2019-07-09 00:53:20 EDT
  - Add time field to list_jobs method.

4.003     2019-06-21 18:06:07 EDT
  - Ignore missing workers for jobs in the minion_foreground named queue to
    make debugging very slow jobs easier.
