@@ -1,5 +1,5 @@
 # This Build.PL for Minion-Backend-SQLite was generated by
-# Dist::Zilla::Plugin::ModuleBuildTiny::Fallback 0.025
+# Dist::Zilla::Plugin::ModuleBuildTiny::Fallback 0.027
 use strict;
 use warnings;
 
@@ -12,7 +12,7 @@ my %errors = map {
     $_ => $@,
 } keys %configure_requires;
 
-if (!grep { $_ } values %errors)
+if (!grep $_, values %errors)
 {
     # This section for Minion-Backend-SQLite was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.015.
     use strict;
@@ -29,9 +29,9 @@ else
         warn <<'EOW'
 *** WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING ***
 
-If you're seeing this warning, your toolchain is really, really old* and you'll
-almost certainly have problems installing CPAN modules from this century. But
-never fear, dear user, for we have the technology to fix this!
+If you're seeing this warning, your toolchain is really, really old* and
+you'll almost certainly have problems installing CPAN modules from this
+century. But never fear, dear user, for we have the technology to fix this!
 
 If you're using CPAN.pm to install things, then you can upgrade it using:
 
@@ -49,9 +49,9 @@ Gang, the irc.perl.org #toolchain IRC channel, and the number 42.
 
 ----
 
-* Alternatively, you are running this file manually, in which case you need
-to learn to first fulfill all configure requires prerequisites listed in
-META.yml or META.json -- or use a cpan client to install this distribution.
+* Alternatively, you are running this file manually, in which case you need to
+learn to first fulfill all configure requires prerequisites listed in META.yml
+or META.json -- or use a cpan client to install this distribution.
 
 You can also silence this warning for future installations by setting the
 PERL_MB_FALLBACK_SILENCE_WARNING environment variable, but please don't do
@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.022.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.025.
     use strict;
     use warnings;
 
@@ -84,7 +84,7 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Minion-Backend-SQLite",
-      "dist_version" => "v5.0.6",
+      "dist_version" => "v5.0.7",
       "license" => "artistic_2",
       "module_name" => "Minion::Backend::SQLite",
       "recursive_test_files" => 1,
