@@ -4,7 +4,7 @@
       "Dan Book <dbook@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 6.022, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Zilla version 6.025, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "artistic_2"
    ],
@@ -64,7 +64,7 @@
    "provides" : {
       "Minion::Backend::SQLite" : {
          "file" : "lib/Minion/Backend/SQLite.pm",
-         "version" : "v5.0.6"
+         "version" : "v5.0.7"
       }
    },
    "release_status" : "stable",
@@ -80,15 +80,16 @@
       },
       "x_IRC" : "ircs://irc.libera.chat/#mojo"
    },
-   "version" : "v5.0.6",
+   "version" : "v5.0.7",
    "x_contributors" : [
       "Dan Book <grinnz@grinnz.com>",
+      "Oliver Kurz <okurz@suse.de>",
       "Sebastian Riedel <s@kraih.com>",
       "Stefan Adams <s1037989@gmail.com>",
       "yrjustice <43676784+yrjustice@users.noreply.github.com>"
    ],
-   "x_generated_by_perl" : "v5.34.0",
-   "x_serialization_backend" : "Cpanel::JSON::XS version 4.26",
+   "x_generated_by_perl" : "v5.36.0",
+   "x_serialization_backend" : "Cpanel::JSON::XS version 4.29",
    "x_spdx_expression" : "Artistic-2.0"
 }
 
